--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Me llamo Ruth Rebeca Luna Correa</h1>
     <h2>Esta es mi primera practica en github</h2>
+    <h3>De la materia de Construye Bases de Datos para Aplicaciones Web</h3>
 </body>
 </html>
